# rest-consumer

./: .travis.yml  CMakeLists.txt  Readme.md
consumerbin/: CMakeLists.txt
consumerbin/include/: Main.h  RestConsumer.h
consumerbin/src/: Main.cxx  RestConsumer.cxx
consumerlib/: CMakeLists.txt
consumerlib/include/: Foo.h
consumerlib/src/: Foo.cxx
tests/: CMakeLists.txt  TestLib.cxx
